--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <div class="filledbar"></div>
                             <div>
                                 <img
-                                    src="images/car-1.jpg"
+                                    src="design/images/car-1.jpg"
                                     alt="Carousel Image"
                                 />
                             </div>
@@ -79,7 +79,7 @@
                             <div class="filledbar"></div>
                             <div>
                                 <img
-                                    src="images/car-1.jpg"
+                                    src="design/images/car-1.jpg"
                                     alt="Carousel Image"
                                 />
                             </div>
@@ -92,7 +92,7 @@
                             <div class="filledbar"></div>
                             <div>
                                 <img
-                                    src="images/car-1.jpg"
+                                    src="design/images/car-1.jpg"
                                     alt="Carousel Image"
                                 />
                             </div>
@@ -105,7 +105,7 @@
                             <div class="filledbar"></div>
                             <div>
                                 <img
-                                    src="images/car-1.jpg"
+                                    src="design/images/car-1.jpg"
                                     alt="Carousel Image"
                                 />
                             </div>
@@ -118,7 +118,7 @@
                             <div class="filledbar"></div>
                             <div>
                                 <img
-                                    src="images/car-1.jpg"
+                                    src="design/images/car-1.jpg"
                                     alt="Carousel Image"
                                 />
                             </div>
@@ -131,7 +131,7 @@
                             <div class="filledbar"></div>
                             <div>
                                 <img
-                                    src="images/car-1.jpg"
+                                    src="design/images/car-1.jpg"
                                     alt="Carousel Image"
                                 />
                             </div>
@@ -144,7 +144,7 @@
                             <div class="filledbar"></div>
                             <div>
                                 <img
-                                    src="images/car-1.jpg"
+                                    src="design/images/car-1.jpg"
                                     alt="Carousel Image"
                                 />
                             </div>
@@ -157,7 +157,7 @@
                             <div class="filledbar"></div>
                             <div>
                                 <img
-                                    src="images/car-1.jpg"
+                                    src="design/images/car-1.jpg"
                                     alt="Carousel Image"
                                 />
                             </div>
@@ -170,7 +170,7 @@
                             <div class="filledbar"></div>
                             <div>
                                 <img
-                                    src="images/car-1.jpg"
+                                    src="design/images/car-1.jpg"
                                     alt="Carousel Image"
                                 />
                             </div>
