--- a/index.html
+++ b/index.html
@@ -191,19 +191,19 @@
 
             <div class="row">
                 <div class="campus-col">
-                    <img src="images/Manila.jpg" />
+                    <img src="design/images/Manila.jpg" />
                     <div class="layer">
                         <h3>PHILIPPINES</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/NY.jpg" />
+                    <img src="design/images/NY.jpg" />
                     <div class="layer">
                         <h3>NEW YORK</h3>
                     </div>
                 </div>
                 <div class="campus-col">
-                    <img src="images/Japan.jpg" />
+                    <img src="design/images/Japan.jpg" />
                     <div class="layer">
                         <h3>JAPAN</h3>
                     </div>
