add about us paragraph

--- a/index.html
+++ b/index.html
@@ -182,7 +182,24 @@
         <!-- ------call to action--- -->
 
         <section class="cta1">
-            <h1>About us<br />INFO dito pre</h1>
+            <h1>About us<br /></h1>
+            <p class="paragraph">
+                Welcome to GoDriveRentals, your ultimate destination for
+                hassle-free car rentals. At GoDriveRentals, we understand that
+                convenience, reliability, and affordability are key when it
+                comes to renting a car. With a wide range of vehicles to choose
+                from, including sedans, SUVs, luxury cars, and more, we strive
+                to provide you with the perfect ride to suit your needs. Our
+                user-friendly website allows you to effortlessly browse,
+                compare, and book your ideal rental car, making the entire
+                process quick and easy. We pride ourselves on exceptional
+                customer service, ensuring that your experience with us is
+                smooth from start to finish. Whether you're planning a road
+                trip, a business venture, or simply need a temporary vehicle,
+                GoDriveRentals is here to make your journey memorable and
+                stress-free. Trust us to be your reliable partner in
+                transportation, and let us take you wherever you need to go.
+            </p>
         </section>
         <!-- ----campus---- -->
 
