--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hidemenu()"></i>
                     <ul>
-                        <b
-                            ><li><a href="index.html">HOME</a></li>
+                        
+                            <li><a href="index.html">HOME</a></li>
                             <li><a href="about.html">ABOUT</a></li>
                             <li><a href="car.html">CARS</a></li>
                             <li><a href="Feedback.html">FEEDBACK</a></li>
-                            <li><a href="contact.html">CONTACT</a></li></b
-                        >
+                            <li><a href="contact.html">CONTACT</a></li>
+                        
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showmenu()"></i>
@@ -314,7 +314,7 @@
                 WHAT ARE YOU WAITING FOR<br />
                 RENT NOW
             </h1>
-            <a class="hero-btn" href="">CLICK ME</a>
+            <a class="hero-btn" href="car.html">CLICK ME</a>
         </section>
 
         <!-- --footer-- -->
