--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>El Siesta Vacaciones</title>
+        <title>GODRIVERENTALS</title>
         <meta charset="utf-8" />
         <meta
             name="viewport"
@@ -80,21 +80,21 @@
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.html" class="nav-link">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a href="rooms.html" class="nav-link">Rooms</a>
+                            <a href="rooms.html" class="nav-link">ABOUT</a>
                         </li>
                         <li class="nav-item">
                             <a href="about.html" class="nav-link"
-                                >Hotel Information</a
+                                >CARS</a
                             >
                         </li>
                         <li class="nav-item active">
-                            <a href="blog.html" class="nav-link">Feedback</a>
+                            <a href="blog.html" class="nav-link">FEEDBACK</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link">CONTACT</a>
                         </li>
                     </ul>
                 </div>
