--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                     <li><a href="car.html">CARS</a></li>
-                    <li><a href="FEEDBACK.html">FEEDBACK</a></li>
+                    <li><a href="blog.html">FEEDBACK</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                     
                 </ul>
