--- a/car.html
+++ b/car.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Carbook - Free Bootstrap 4 Template by Colorlib</title>
+        <title>GODRIVERENTALS</title>
         <meta charset="utf-8" />
         <meta
             name="viewport"
@@ -38,7 +38,7 @@
         >
             <div class="container">
                 <a class="navbar-brand" href="index.html"
-                    >Car<span>Book</span></a
+                    ><span>GODRIVE</span> RENTALS</a
                 >
                 <button
                     class="navbar-toggler"
@@ -54,11 +54,11 @@
 
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item active"><a href="car.html" class="nav-link">Cars</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">ABOUT</a></li>
+	          <li class="nav-item active"><a href="car.html" class="nav-link">CARS</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">FEEBACK</a></li>
+	          <li class="nav-item"><a href="contact.html" class="nav-link">CONTACT</a></li>
                     </ul>
                 </div>
             </div>
@@ -640,27 +640,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <p>
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            Copyright &copy;
-                            <script>
-                                document.write(new Date().getFullYear());
-                            </script>
-                            All rights reserved | This template is made with
-                            <i
-                                class="icon-heart color-danger"
-                                aria-hidden="true"
-                            ></i>
-                            by
-                            <a href="https://colorlib.com" target="_blank"
-                                >Colorlib</a
-                            >
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
-                    </div>
-                </div>
+                
             </div>
         </footer>
 
