--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     <body>
         <section class="header">
             <nav>
-                <a href="index.html"><img src="design/images/Logo.png" alt="" /></a>
+                <a href="index.html"
+                    ><img src="design/images/Logo.png" alt=""
+                /></a>
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hidemenu()"></i>
                     <ul>
-                        
-                            <li><a href="index.html">HOME</a></li>
-                            <li><a href="about.html">ABOUT</a></li>
-                            <li><a href="car.html">CARS</a></li>
-                            <li><a href="Feedback.html">FEEDBACK</a></li>
-                            <li><a href="contact.html">CONTACT</a></li>
-                        
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="car.html">CARS</a></li>
+                        <li><a href="blog.html">FEEDBACK</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showmenu()"></i>
