--- a/car-single.html
+++ b/car-single.html
@@ -42,6 +42,7 @@
 	          <li class="nav-item active"><a href="car.html" class="nav-link">CARS</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">FEEDBACK</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">CONTACT</a></li>
+			  <li class="nav-item"><a href="GDRLogin.html"  class="nav-link">SIGNOUT</a></li>
 	        </ul>
 	      </div>
 	    </div>
