--- a/about.html
+++ b/about.html
@@ -33,6 +33,7 @@
                     <li><a href="car.html">CARS</a></li>
                     <li><a href="blog.html">FEEDBACK</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
+                    <li><a href="GDRLogin.html">SIGNOUT</a></li>
                     
                 </ul>
             </div>
