--- a/about.html
+++ b/about.html
@@ -20,7 +20,6 @@
 
     <!-- ----header--- -->
 
-<<<<<<< HEAD
 <body>
     <section class="sub-header">
         <nav>
@@ -37,23 +36,6 @@
                     <li><a href="GDRLogin.html">SIGNOUT</a></li>
                     
                 </ul>
-=======
-    <body>
-        <section class="sub-header">
-            <nav>
-                <a href="index.html"
-                    ><img src="design/images/Logo.png" alt=""
-                /></a>
-                <div class="nav-links" id="navLinks">
-                    <i class="fa fa-times" onclick="hidemenu()"></i>
-                    <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="about.html">ABOUT</a></li>
-                        <li><a href="car.html">CARS</a></li>
-                        <li><a href="blog.html">FEEDBACK</a></li>
-                        <li><a href="contact.html">CONTACT</a></li>
-                    </ul>
-                </div>
                 <i class="fa fa-bars" onclick="showmenu()"></i>
             </nav>
 
@@ -78,9 +60,9 @@
                 </div>
 
                 <div class="about-col">
-                    <img src="eduford/about.jpg" alt="" />
+                    <img src="design/images/car-9.jpg" alt="" />
                 </div>
->>>>>>> 67b2a38256e398d1d9a20edbba076071d7777ac0
+
             </div>
         </section>
 
