--- a/car.html
+++ b/car.html
@@ -13,19 +13,34 @@
             rel="stylesheet"
         />
 
-        <link rel="stylesheet" href="design/cardesign/css/open-iconic-bootstrap.min.css" />
+        <link
+            rel="stylesheet"
+            href="design/cardesign/css/open-iconic-bootstrap.min.css"
+        />
         <link rel="stylesheet" href="design/cardesign/css/animate.css" />
 
-        <link rel="stylesheet" href="design/cardesign/css/owl.carousel.min.css" />
-        <link rel="stylesheet" href="design/cardesign/css/owl.theme.default.min.css" />
+        <link
+            rel="stylesheet"
+            href="design/cardesign/css/owl.carousel.min.css"
+        />
+        <link
+            rel="stylesheet"
+            href="design/cardesign/css/owl.theme.default.min.css"
+        />
         <link rel="stylesheet" href="design/cardesign/css/magnific-popup.css" />
 
         <link rel="stylesheet" href="design/cardesign/css/aos.css" />
 
         <link rel="stylesheet" href="design/cardesign/css/ionicons.min.css" />
 
-        <link rel="stylesheet" href="design/cardesign/css/bootstrap-datepicker.css" />
-        <link rel="stylesheet" href="design/cardesign/css/jquery.timepicker.css" />
+        <link
+            rel="stylesheet"
+            href="design/cardesign/css/bootstrap-datepicker.css"
+        />
+        <link
+            rel="stylesheet"
+            href="design/cardesign/css/jquery.timepicker.css"
+        />
 
         <link rel="stylesheet" href="design/cardesign/css/flaticon.css" />
         <link rel="stylesheet" href="design/cardesign/css/icomoon.css" />
@@ -54,12 +69,24 @@
 
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">ABOUT</a></li>
-	          <li class="nav-item active"><a href="car.html" class="nav-link">CARS</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">FEEBACK</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">CONTACT</a></li>
-              <li class="nav-item"><a href="GDRLogin.html"  class="nav-link">SIGNOUT</a></li>
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="about.html" class="nav-link">ABOUT</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="car.html" class="nav-link">CARS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="blog.html" class="nav-link">FEEBACK</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="contact.html" class="nav-link">CONTACT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="GDRLogin.html" class="nav-link">SIGNOUT</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -100,7 +127,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-1.jpg)"
+                                style="
+                                    background-image: url(design/images/car-1.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -133,7 +162,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-2.jpg)"
+                                style="
+                                    background-image: url(design/images/car-2.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -164,7 +195,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-3.jpg)"
+                                style="
+                                    background-image: url(design/images/car-3.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -198,7 +231,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-4.jpg)"
+                                style="
+                                    background-image: url(design/images/car-4.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -231,7 +266,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-5.jpg)"
+                                style="
+                                    background-image: url(design/images/car-5.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -262,7 +299,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-6.jpg)"
+                                style="
+                                    background-image: url(design/images/car-6.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -296,7 +335,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-7.jpg)"
+                                style="
+                                    background-image: url(design/images/car-7.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -329,7 +370,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-8.jpg)"
+                                style="
+                                    background-image: url(design/images/car-8.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -360,7 +403,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-9.jpg)"
+                                style="
+                                    background-image: url(design/images/car-9.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -394,7 +439,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-10.jpg)"
+                                style="
+                                    background-image: url(design/images/car-10.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -427,7 +474,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-11.jpg)"
+                                style="
+                                    background-image: url(design/images/car-11.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -458,7 +507,9 @@
                         <div class="car-wrap rounded ftco-animate">
                             <div
                                 class="img rounded d-flex align-items-end"
-                                style="background-image: url(design/images/car-12.jpg)"
+                                style="
+                                    background-image: url(design/images/car-12.jpg);
+                                "
                             ></div>
                             <div class="text">
                                 <h2 class="mb-0">
@@ -641,7 +692,6 @@
                         </div>
                     </div>
                 </div>
-                
             </div>
         </footer>
 
@@ -690,6 +740,15 @@
                                 action="#"
                                 class="request-form ftco-animate bg-primary"
                             >
+                                <div class="form-group mr-2">
+                                    <label for="" class="label">Email</label>
+                                    <input
+                                        type="text"
+                                        class="form-control"
+                                        id="book_pick_date"
+                                        placeholder="Email"
+                                    />
+                                </div>
                                 <div class="form-group">
                                     <label for="" class="label"
                                         >Pick-up location</label
@@ -744,6 +803,59 @@
                                         id="time_pick"
                                         placeholder="Time"
                                     />
+                                </div>
+                                <div class="form-group">
+                                    <label for="" class="label"
+                                        >Payment Option</label
+                                    >
+                                    <div class="my-2">
+                                        <input
+                                            type="text"
+                                            class="form-control"
+                                            id="payment_pick"
+                                            placeholder="Card Number"
+                                        />
+                                    </div>
+
+                                    <div class="my-2">
+                                        <select
+                                            class="form-control"
+                                            placeholder="Card"
+                                            type="text"
+                                        >
+                                            <option selected>
+                                                Payment Card
+                                            </option>
+                                            <option class="text-dark" value="1">
+                                                Visa
+                                            </option>
+                                            <option class="text-dark" value="2">
+                                                MasterCard
+                                            </option>
+                                            <option class="text-dark" value="3">
+                                                American Express
+                                            </option>
+                                        </select>
+                                    </div>
+
+                                    <div class="my-2">
+                                        <div class="d-flex">
+                                            <div class="form-group mr-2">
+                                                <input
+                                                    type="text"
+                                                    class="form-control"
+                                                    placeholder="MM/YYYY"
+                                                />
+                                            </div>
+                                            <div class="form-group ml-2">
+                                                <input
+                                                    type="text"
+                                                    class="form-control"
+                                                    placeholder="CCV"
+                                                />
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <input
