--- a/test.html
+++ b/test.html
@@ -20,6 +20,14 @@
                         class="request-form ftco-animate bg-primary"
                     >
                         <div class="form-group">
+                            <label for="" class="label">Email</label>
+                            <input
+                                type="text"
+                                class="form-control"
+                                placeholder="City, Airport, Station, etc"
+                            />
+                        </div>
+                        <div class="form-group">
                             <label for="" class="label">Pick-up location</label>
                             <input
                                 type="text"
