--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -60,13 +61,13 @@
     <body>
         <section class="sub-header-feedback">
             <nav>
-                <a href="index.html"
+                <a href="index.php"
                     ><img src="design/images/Logo.png" alt=""
                 /></a>
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hidemenu()"></i>
                     <ul>
-                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="index.php">HOME</a></li>
                         <li><a href="about.html">ABOUT</a></li>
                         <li><a href="car.html">CARS</a></li>
                         <li><a href="blog.html">FEEDBACK</a></li>
