--- a/contact.html
+++ b/contact.html
@@ -80,21 +80,21 @@
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="index.php" class="nav-link">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a href="rooms.html" class="nav-link">Rooms</a>
+                            <a href="about.php" class="nav-link">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link"
-                                >Hotel Information</a
+                            <a href="cars.html" class="nav-link"
+                                >CARS</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a href="blog.html" class="nav-link">Feedback</a>
+                            <a href="blog.html" class="nav-link">FEEDBACK</a>
                         </li>
                         <li class="nav-item active">
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link">CONTACT</a>
                         </li>
                     </ul>
                 </div>
