--- a/blog-single.html
+++ b/blog-single.html
@@ -67,8 +67,8 @@
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hidemenu()"></i>
                     <ul>
-                        <li><a href="index.html">HOME</a></li>
-                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="index.php">HOME</a></li>
+                        <li><a href="about.php">ABOUT</a></li>
                         <li><a href="car.html">CARS</a></li>
                         <li><a href="blog.html">FEEDBACK</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
