--- a/car-single.html
+++ b/car-single.html
@@ -37,8 +37,8 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">ABOUT</a></li>
+	          <li class="nav-item"><a href="index.php" class="nav-link">HOME</a></li>
+	          <li class="nav-item"><a href="about.php" class="nav-link">ABOUT</a></li>
 	          <li class="nav-item active"><a href="car.html" class="nav-link">CARS</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">FEEDBACK</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">CONTACT</a></li>
