--- a/car.html
+++ b/car.html
@@ -70,10 +70,10 @@
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="index.html" class="nav-link">HOME</a>
+                            <a href="index.php" class="nav-link">HOME</a>
                         </li>
                         <li class="nav-item">
-                            <a href="about.html" class="nav-link">ABOUT</a>
+                            <a href="about.php" class="nav-link">ABOUT</a>
                         </li>
                         <li class="nav-item active">
                             <a href="car.html" class="nav-link">CARS</a>
