--- a/blog-single.html
+++ b/blog-single.html
@@ -69,7 +69,7 @@
                     <ul>
                         <li><a href="index.php">HOME</a></li>
                         <li><a href="about.php">ABOUT</a></li>
-                        <li><a href="car.html">CARS</a></li>
+                        <li><a href="car.php">CARS</a></li>
                         <li><a href="blog.html">FEEDBACK</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
@@ -243,30 +243,7 @@
                             <div class="comment-form-wrap pt-5">
                                 <h3 class="mb-5">Leave a comment</h3>
                                 <form action="#" class="p-5 bg-light">
-                                    <div class="form-group">
-                                        <label for="name">Name *</label>
-                                        <input
-                                            type="text"
-                                            class="form-control"
-                                            id="name"
-                                        />
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="email">Email *</label>
-                                        <input
-                                            type="email"
-                                            class="form-control"
-                                            id="email"
-                                        />
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="website">Website</label>
-                                        <input
-                                            type="url"
-                                            class="form-control"
-                                            id="website"
-                                        />
-                                    </div>
+                                    
 
                                     <div class="form-group">
                                         <label for="message">Message</label>
