--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
                     <ul>
                         <li><a href="index.php">HOME</a></li>
                         <li><a href="about.php">ABOUT</a></li>
-                        <li><a href="car.html">CARS</a></li>
+                        <li><a href="car.php">CARS</a></li>
                         <li><a href="blog.html">FEEDBACK</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
@@ -78,7 +78,7 @@
                 <i class="fa fa-bars" onclick="showmenu()"></i>
             </nav>
 
-            <h1>Feedback</h1>
+            <h1>Customer Feedbacks</h1>
         </section>
         <!-- END nav -->
 
