--- a/car-single.html
+++ b/car-single.html
@@ -79,10 +79,10 @@
                             <a href="car.php" class="nav-link">CARS</a>
                         </li>
                         <li class="nav-item">
-                            <a href="blog.html" class="nav-link">FEEDBACK</a>
+                            <a href="blog.php" class="nav-link">FEEDBACK</a>
                         </li>
                         <li class="nav-item">
-                            <a href="contact.html" class="nav-link">CONTACT</a>
+                            <a href="contact.php" class="nav-link">CONTACT</a>
                         </li>
                         <li class="nav-item">
                             <a href="GDRLogin.html" class="nav-link">SIGNOUT</a>
